--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,6 +25,7 @@ code {
   width: 100%;
   display: flex;
   height: 600px;
+  margin-top: -250px;
 }
 
 .box {
@@ -79,11 +80,6 @@ a.home-link, a.login-link, a.contact-link {
 
 }
 
-/* .icon {
-  height: 30px;
-  color: white;
-  opacity: none;
-} */
 
 nav {
   display: block;
@@ -112,51 +108,32 @@ a:hover {
   color: rgb(221, 221, 212);
 }
 
-/* nav a:hover svg {
-  opacity: 0;
-} */
 
 nav a:hover:after {
   opacity: 1;
 }
 
 
-/* 
-a:after {
-  content: ' ';
-  font-size: 12px;
-  letter-spacing: 2px;
-  position: relative;
-  bottom: 0;
-  display: block;
-  width: 50%;
-  text-align: center;
-  opacity: 0;
-  transition: all 0.3s ease-out;
-} */
-
-/* nav a.home-link.active:after {
-  content: 'HOME';
-}
-
-nav a.login-link:after {
-  content: 'LOGIN';
-}
-
-nav a.contact-link:after {
-  content: 'CONTACT';
-} */
-
 /* Sign up CSS */
-.SignUpContainer {
+.sign-up {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 200px;
-  margin-left: 50px;
+  height: 500px;
+  text-align: center;
 }
 
-form {
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 500px;
+  
+}
+
+.form-inputs {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -177,27 +154,90 @@ input {
   margin-top: 5px;
 }
 
-button {
+.btn {
   margin-top: 20px;
-  padding: 10px 20px;
+  padding: 10px 15px;
   background-color: #3f51b5;
   color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  display: flex;
 }
 
 /* Contact Info CSS */
-.contact-form {
-  background-color: aqua;
+.contact-container {
+  background-color: white;
   left: 70px;
 }
 
-/* Layout CSS */
-/* .page {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+
+.contact-box {
+  float: left;
+  width: 400px; /* adjust width as needed */
+  height: 100px; /* adjust height as needed */
+  margin-right: 10px; /* adjust margin as needed */
+  margin-bottom: 10px; /* adjust margin as needed */
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
+
+/* .Kenji, .Kennedy, .Daniel, .Keenan, .Myles {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  height: 20px;
+  text-align: center;
 } */
 
 
+
+/* Login page CSS */
+.login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 200px;
+  height: 500px;
+  text-align: center;
+}
+
+.login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 500px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 500px;
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.login-btn {
+  margin-top: 20px;
+  padding: 10px 15px;
+  background-color: #3f51b5;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  display: flex;
+}
+
+.login-inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  max-width: 500px;
+}
