--- a/client/src/index.css
+++ b/client/src/index.css
@@ -241,3 +241,110 @@ input {
   width: 200px;
   max-width: 500px;
 }
+
+/* Profile page CSS */
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  
+}
+
+.finance-section {
+  max-width: 600px;
+  margin: 0 auto;
+  background-color: #f8f8f8;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+  margin-top: 10%
+}
+
+.finance-input-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+  
+}
+
+.finance-input-group label {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.finance-input-group input,
+.finance-input-group div {
+  flex-grow: 1;
+}
+
+button {
+  background-color: #066195;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #005a88;
+}
+
+.my-trades-container {
+  margin-top: 20px;
+}
+
+.my-trades-container h2 {
+  margin-bottom: 15px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+table th,
+table td {
+  text-align: left;
+  padding: 8px;
+  border: 1px solid #ccc;
+  
+}
+
+table thead {
+  background-color: #0068a5;
+  color: #fff;
+}
+
+table tbody tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+.stock-price-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff66;
+  border: 1px solid #ccc;
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+
+
+.total-value-box {
+   display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff66;
+  border: 1px solid #ccc;
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+  font-weight: bold;
+}
